--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -4,15 +4,15 @@
 {{top2}}
 * {{l|en|etc}}, {{l|en|etc.}}
 * [[etcetera]]
-* {{l|en|et ceteræ}}
+* {{l|en|et ceteræ}} {{qualifier|archaic}}
 {{mid2}}
-* {{l|en|&c}}, {{l|en|&c.}}
-* [[& cetera]]
-* [[et cætera]], [[et caetera]] {{qualifier|{{l|en|erroneous}}}}
+* {{l|en|&c}}, {{l|en|&c.}} {{qualifier|dated}}
+* [[& cetera]] {{qualifier|dated}}
+* [[et cætera]], [[et caetera]] {{qualifier|[[erroneous]] and archaic}}
 {{bottom}}
 
 ===Etymology===
-From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}
+From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}.
 
 ===Pronunciation===
 * {{IPA|/ˌɛt ˈsɛt(ə)ɹə/|/ˌɛkˈsɛt(ə)ɹə/|lang=en}}; see usage notes below
@@ -27,7 +27,7 @@ From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}
 #: ''The plagiarism was painfully obvious: "It was the best of times, it was the worst of times," '''etc.'''''
 
 ====Usage notes====
-* This phrase is not usually written out; rather, it is usually abbreviated in writing as {{term|etc.|lang=en}}, or sometimes (especially formerly) as {{term|&c.|lang=en}}. These abbreviations are still pronounced, however, as the full phrase.
+* This phrase is not usually written out; rather, it is usually abbreviated in writing as {{term|etc.|lang=en}}. In the past, it migth also be written {{term|&c.|lang=en}}, although this is now dated. The abbreviated forms are still pronounced, however, as the full phrase.
 * Many speakers use a {{IPAchar|/k/|lang=en}} sound rather than a {{IPAchar|/t/|lang=en}} sound in the first word. This pronunciation is usually considered incorrect, is [[proscribe]]d, and is somewhat stigmatized. It is sometimes represented in [[eye dialect]] as "[[excetera#English|excetera]]", "[[exetera#English|exetera]]", or "[[ekcetera#English|ekcetera]]".
 
 ====Synonyms====
