--- a/en/坴/坴.13047.wikitext
+++ b/en/坴/坴.13047.wikitext
@@ -9,8 +9,8 @@
 # a [[clod]] of [[earth]]
 # [[land]]
 
-====Derived terms====
-* [[睦]], [[陸]], [[稑]], [[逵]], [[鵱]], [[燅]], [[埶]], [[𪂚]], [[𡎐]]
+====Derived characters====
+* [[睦]], [[陸]], [[稑]], [[逵]], [[鵱]], [[燅]], [[埶]], [[鯥]], [[𪂚]], [[𡎐]]
 
 ====References====
 * {{Han ref|kx=0226.340|dkj=04989|dj=0462.110|hdz=10433.040|uh=5774|ud=22388|bh=CBFD|bd=52221}}
