--- a/en/昝/昝.16965.wikitext
+++ b/en/昝/昝.16965.wikitext
@@ -10,12 +10,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[zaan2]]|y=jaan2}}
+===Pronunciation===
+{{zh-pron
+|m=zǎn
+|c=zaan2
+|mc=y
+|oc=y
+|ma=
+|cat=pron
+}}
 
-# {{defn|lang=yue|sort=日05}}
+===Definitions===
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -28,15 +37,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[さん]] (san)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zǎn]] ([[zan3]])|wg=tsan<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
 
 [[fr:昝]]
 [[hu:昝]]
