--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -90,6 +90,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Hindi: {{t|hi|लड़ना|tr=laṛnā|sc=Deva}}, {{t|hi|झगड़ना|sc=Deva}}
 * Hungarian: {{t+|hu|harcol}}, {{t+|hu|verekszik}}
 * Icelandic: {{t+|is|slást}}, {{t+|is|berjast}}
+* Indonesian: {{t+|id|kelahi}}, {{t+|id|tarung}}
 * Irish: {{t|ga|troid}}, {{t|ga|comhraic}}
 * Italian: {{t+|it|lottare}}, {{t+|it|azzuffarsi}}, {{t+|it|battersi}}
 * Japanese: {{t+|ja|喧嘩|tr=けんかする, kenka suru|sc=Jpan|alt=喧嘩する}}, {{t|ja|対決|tr=たいけつする, taiketsu suru|sc=Jpan|alt=対決する}}, {{t+|ja|戦う|tr=たたかう, tatakau|sc=Jpan}}, {{t|ja|闘う|tr=たたかう, tatakau|sc=Jpan}}
@@ -129,6 +130,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|wójowaś}}
 * Spanish: {{t+|es|pelear}}, {{t+|es|luchar}}
+* Sundanese: {{t|su|tarung}}
 * Swahili: {{t+|sw|vita}}
 * Swedish: {{t+|sv|strida}}, {{t+|sv|slåss}}, {{t+|sv|kämpa}}
 * Thai: {{t+|th|รบ|tr=róp|sc=Thai}}
