--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -96,42 +96,44 @@ The phrase "dream come true" is a set phrase; the verb "come" in the sense "beco
 
 The collocations “[[come with]]” and “[[come along]]” mean {{term|accompany|lang=en}}, used as “Do you want to come with me?” and “Do you want to come along?” In the Midwestern American dialect, “come with” can occur without a following object, as in “Do you want to come with?” In this dialect, “with” can also be used in this way with some other verbs, such as “take with”. Examples of this may be found in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American Buffalo}}.''<ref>[http://positiveanymore.blogspot.com/2006/04/chicago-dialect.html Chicago Dialect]</ref> This objectless use is not permissible in other dialects.
 
+
 ====Antonyms====
-* [[leave]], [[go]]
+* {{l/en|leave}}, {{l/en|go}}
 
 ====Derived terms====
 {{rel-top3|Terms derived from ''come'' (verb)}}
-* [[come about]]
-* [[come across]]
-* [[come after]]
-* [[come aloft]]
-* [[come along]]
-* [[come around]]
-* [[come at]]
-* [[come back]]
-* [[come by]]
-* [[come clean]]
+* {{l/en|come about}}
+* {{l/en|come across}}
+* {{l/en|come after}}
+* {{l/en|come aloft}}
+* {{l/en|come along}}
+* {{l/en|come around}}
+* {{l/en|come at}}
+* {{l/en|come back}}
+* {{l/en|come by}}
+* {{l/en|come clean}}
 {{rel-mid3}}
-* [[come down]]
-* [[come forward]]
-* [[come from a good place]]
-* [[come into]]
-* [[come into one's own]]
-* [[come off]]
-* [[come off it]]
-* [[come on]]
-* [[come out]]
-* [[come out with]]
+* {{l/en|come down}}
+* {{l/en|come forward}}
+* {{l/en|come from a good place}}
+* {{l/en|come into}}
+* {{l/en|come into one's own}}
+* {{l/en|come off}}
+* {{l/en|come off it}}
+* {{l/en|come on}}
+* {{l/en|come out}}
+* {{l/en|come out with}}
 {{rel-mid3}}
-* [[come short]]
-* [[come to]]
-* [[come through]]
-* [[come true]]
-* [[come up]]
-* [[come with]]
-* [[come with the territory]]
-* [[come what may]]
-* [[to come]]
+* {{l/en|come short}}
+* {{l/en|come through}}
+* {{l/en|come to}}
+* {{l/en|come true}}
+* {{l/en|come up}}
+* {{l/en|come what may}}
+* {{l/en|come with}}
+* {{l/en|come with the territory}}
+* {{l/en|forthcome}}
+* {{l/en|to come}}
 {{rel-bottom}}
 
 ====Translations====
