--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -40,6 +40,7 @@ Supposed by some to derive from {{etyl|gd|en}} {{term|stob||to prick, to prod, t
 * French: {{t+|fr|percée|f}}
 * Galician: {{t|gl|puñalada|f}}
 * German: {{t+|de|Stich|m}}
+* Indonesian: {{t+|id|tikam}}
 * Irish: {{t|ga|rop|m}}, {{t|ga|sá|m}}
 * Latgalian: {{t|ltg|dūrt}}
 {{trans-mid}}
