--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -238,6 +238,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|pśiś}}, {{t|dsb|póraś|impf|alt=se póraś}}
 * Spanish: {{t+|es|venir}}
+* Sundanese: {{t|su|sumping}}
 * Swahili: {{t|sw|kuja}}
 * Swedish: {{t+|sv|komma}}
 * Tajik: {{t|tg|омадан}}
