--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -97,6 +97,8 @@
 * Slovak: {{qualifier|tortoise or turtle}} {{t|sk|korytnačka|f}}
 * Slovene: {{qualifier|tortoise or turtle}} {{t+|sl|želva|f}}, {{t|sl|kopenska želva|f}}
 * Somali: {{t|so|diin}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|nopawa|f}} {{qualifier|tortoise or turtle}}, {{t|dsb|žołw|f}} {{qualifier|tortoise or turtle}}
 * Spanish: {{qualifier|tortoise or turtle}} {{t+|es|tortuga|f}}, {{t|es|tortuga terrestre|f}}, {{t|es|morrocoy|m}} {{qualifier|Venezuela}}
 * Swahili: {{t+|sw|kobe}}
 * Swedish: {{t+|sv|sköldpadda}}
