--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -220,7 +220,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Spanish: {{t+|es|tocar}}
 * Swedish: {{t+|sv|spela}}
 * Tagalog: {{t|tl|tumugtog}}
-* Thai: {{t-needed|th}}
+* Thai: {{t+|th|เล่น|tr=lên|sc=Thai}}
 * Turkish: {{t+|tr|çalmak}}
 * Urdu: {{t|ur|بجانا|tr=bajānā|sc=ur-Arab}}
 {{trans-bottom}}
@@ -354,7 +354,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Swahili: {{t+|sw|tamthilia}}
 * Swedish: {{t+|sv|spela}}
 * Tagalog: {{t|tl|maglaro}}
-* Thai: {{t-needed|th}}
+* Thai: {{t+|th|เล่น|tr=lên|sc=Thai}}
 * Turkish: {{t+|tr|oynamak}}
 {{trans-bottom}}
 
