--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -65,8 +65,9 @@
 * Czech: {{t|cs|plsťák|m}}, {{t|cs|plstěný klobouk|m}}
 * Danish: {{t|da|filthat|c}}
 * Finnish: {{t+|fi|huopahattu}}
-* German: {{t+|de|Filzhut|m}}
+* French: {{t+|fr|feutre|m}}
 {{trans-mid}}
+* German: {{t+|de|Filzhut|m}}
 * Hungarian: {{t+|hu|nemezkalap}}
 * Norwegian: {{t|no|filthatt|m}}
 * Serbo-Croatian: {{t|sh|pusteni šešir|m}}
