--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -149,7 +149,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Greek: {{t+|el|Γερμανία|f|tr=Germanía}}
 * Gujarati: {{t|gu|જર્મની|tr=jarmanī|sc=Gujr}}
 * Hausa: {{t|ha|Jamus|f|alt=Jāmùs}}
-* Hawaiian: {{t|haw|Kelemānia}}
+* Hawaiian: {{t|haw|Kelemānia}}, {{t|haw|Koekelana}}
 * Hebrew: {{t|he|גרמניה|f|tr=Germania}}
 * Hindi: {{t+|hi|जर्मनी|m|tr=jarmanī}}
 * Hungarian: {{t+|hu|Németország}}
