--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
 ===Etymology===
-From {{etyl|enm|en}} {{term|cacchen|lang=enm}}, from {{etyl|xno|en}} {{term|cachier||lang=fro}}, from {{etyl|ONF.|en}}, from {{etyl|LL.|en}} {{term|captio|captiare|lang=la}}, from {{etyl|la|en}} {{term|capto|captare|lang=la}}. Akin to [[w:French language|Modern French]] {{term|chasser|lang=fr}} (from Old French {{term|chacier|lang=fro}}, whence English ''[[chase]]''), [[w:Spanish language|Spanish]] {{term|cazar|lang=es}}.
+From {{etyl|enm|en}} {{m|enm|cacchen}}, from {{etyl|xno|en}} {{term|cachier||lang=fro}}, from {{etyl|ONF.|en}}, from {{etyl|LL.|en}} {{term|captio|captiare|lang=la}}, from {{etyl|la|en}} {{term|capto|captare|lang=la}}. Akin to [[w:French language|Modern French]] {{m|fr|chasser}} (from Old French {{m|fro|chacier}}, whence English ''[[chase]]''), [[w:Spanish language|Spanish]] {{m|es|cazar}}.
 
-The verb became irregular, possibly under the influence of the similar meaning {{term|latch|lang=en}} (from {{etyl|ang|en}} {{term|læċċan|lang=ang}}) whose past tense was {{term|lahte|lang=en}}, {{term|lauhte|lang=en}}, {{term|laught|lang=en}} ({{etyl|ang|en}} {{term|læhte|lang=ang}}) until becoming regularised in Modern English.
+The verb became irregular, possibly under the influence of the similar meaning {{m|en|latch}} (from {{etyl|ang|en}} {{m|ang|læċċan}}) whose past tense was {{m|en|lahte}}, {{m|en|lauhte}}, {{m|en|laught}} ({{etyl|ang|en}} {{m|ang|læhte}}) until becoming regularised in Modern English.
 
 ===Pronunciation===
 * {{enPR|kăch}}, {{IPA|/kætʃ/|/kɛtʃ/|[ˈkʰæt͡ʃ]|[ˈkʰɛt͡ʃ]|lang=en}}
@@ -61,7 +61,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 # {{context|countable|music|lang=en}} The [[refrain]]; a line or lines of a song which are repeated from verse to verse. {{jump|refrain|s}}
 #* {{quote-book|2003|Robert Hugh Benson|Come Rack! Come Rope!|page=268|url=http://books.google.com/books?id=f5abPx1KeKQC
 |passage=The phrase repeated itself like the '''catch''' of a song.}}
-# {{context|countable|cricket|baseball|lang=en}}{{senseid|cricket}}{{senseid|baseball}} The act of catching a hit ball before it reaches the ground, resulting in an out.
+# {{context|countable|cricket|baseball|lang=en}}<span id="cricket"/> The act of catching a hit ball before it reaches the ground, resulting in an out.
 #* {{quote-news|1997|May 10|Henry Blofeld|Cricket: Rose and Burns revive Somerset|The Independent|url=http://www.highbeam.com/doc/1P2-4855186.html
 |passage=It was he who removed Peter Bowler with the help of a good '''catch''' at third slip.}}
 # {{context|countable|cricket|lang=en}} A player in respect of his catching ability; particularly one who catches well.
@@ -188,115 +188,115 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 ===Verb===
 {{en-verb|catches|catching|caught}}
 
-#{{lb|en|heading}} ''To capture, overtake.''
-##{{lb|en|transitive}} To [[capture]] or [[snare]] (someone or something which would rather escape). {{jump|capture prey|s}} {{defdate|from 13<sup>th</sup>c.}}
-##:{{ux|en|I hope I '''catch''' a fish.&emsp; {{nowrap|He ran but we '''caught''' him at the exit.}}&emsp; {{nowrap|The police '''caught''' the robber at a nearby casino.}}}}
-##{{lb|en|transitive}} To [[entrap]] or [[trip up]] a person; to [[deceive]]. {{defdate|from 14<sup>th</sup>c.}}
-##*'''1611''', ''[[w:Authorized King James Version|Authorized King James Version]]'', [[wikisource:Bible_(King_James)/Mark#Chapter_12|Mark 12:13]]:
-##*:And they send unto him certain of the Pharisees and of the Herodians, to '''catch''' him in his words.
-##{{lb|en|transitive|figuratively|dated}} To [[marry]] or enter into a similar [[relationship]] with.
-##*'''1933''', {{w|Sinclair Lewis}}, ''[http://books.google.com/books?id=NF5JAAAAMAAJ Ann Vickers]'', p.108:
-##*:The public{{...}}said that Miss Bogardus was a suffragist because she had never '''caught''' a man; that she wanted something, but it wasn't the vote.
-##*'''2006''', Michael Collier and Georgia Machemer, ''[http://books.google.com/books?id=XKDr4vXVbvIC Medea]'', p.23:
-##*:As for Aspasia, concubinage with Pericles brought her as much honor as she could hope to claim in Athens.{{...}}from the moment she '''caught''' her man, this influential, unconventional woman became a lightning rod{{nb...}}.
-##{{lb|en|transitive}} To reach (someone) with a [[strike]], [[blow]], weapon etc. {{defdate|from 16<sup>th</sup>c.}}
-##:{{ux|en|If he '''catches''' you on the chin, you'll be on the mat.}}
-##*{{quote-news|year=2011|date=September 28|author=Jon Smith|work=BBC Sport
+# {{lb|en|heading}} ''To capture, overtake.''
+## {{lb|en|transitive}} To [[capture]] or [[snare]] (someone or something which would rather escape). {{jump|capture prey|s}} {{defdate|from 13<sup>th</sup>c.}}
+##: {{ux|en|I hope I '''catch''' a fish.&emsp; {{nowrap|He ran but we '''caught''' him at the exit.}}&emsp; {{nowrap|The police '''caught''' the robber at a nearby casino.}}}}
+## {{lb|en|transitive}} To [[entrap]] or [[trip up]] a person; to [[deceive]]. {{defdate|from 14<sup>th</sup>c.}}
+##* '''1611''', ''[[w:Authorized King James Version|Authorized King James Version]]'', [[wikisource:Bible_(King_James)/Mark#Chapter_12|Mark 12:13]]:
+##*: And they send unto him certain of the Pharisees and of the Herodians, to '''catch''' him in his words.
+## {{lb|en|transitive|figuratively|dated}} To [[marry]] or enter into a similar [[relationship]] with.
+##* '''1933''', {{w|Sinclair Lewis}}, ''[http://books.google.com/books?id=NF5JAAAAMAAJ Ann Vickers]'', p.108:
+##*: The public{{...}}said that Miss Bogardus was a suffragist because she had never '''caught''' a man; that she wanted something, but it wasn't the vote.
+##* '''2006''', Michael Collier and Georgia Machemer, ''[http://books.google.com/books?id=XKDr4vXVbvIC Medea]'', p.23:
+##*: As for Aspasia, concubinage with Pericles brought her as much honor as she could hope to claim in Athens.{{...}}from the moment she '''caught''' her man, this influential, unconventional woman became a lightning rod{{nb...}}.
+## {{lb|en|transitive}} To reach (someone) with a [[strike]], [[blow]], weapon etc. {{defdate|from 16<sup>th</sup>c.}}
+##: {{ux|en|If he '''catches''' you on the chin, you'll be on the mat.}}
+##* {{quote-news|year=2011|date=September 28|author=Jon Smith|work=BBC Sport
 |title=[http://news.bbc.co.uk/sport2/hi/football/europe/14998331.stm Valencia 1-1 Chelsea]
 |passage=The visitors started brightly and had an early chance when Valencia's experienced captain David Albeda gifted the ball to Fernando Torres, but the striker was '''caught''' by defender Adil Rami as he threatened to shoot.}}
-##{{lb|en|transitive}} To [[overtake]] or [[catch up]] to; to be in time for. {{defdate|from 17<sup>th</sup>c.}}
-##:{{ux|en|If you leave now you might '''catch''' him.&emsp; {{nowrap|I would love to have dinner but I have to '''catch''' a plane.}}}}
-##{{lb|en|transitive}} To [[discover]] unexpectedly; to [[surprise]] (someone doing something). {{defdate|from 17<sup>th</sup>c.}}
-##:{{ux|en|He was '''caught''' on video robbing the bank.&emsp; {{nowrap|He was '''caught''' in the act of stealing a biscuit.}}}}
-##{{lb|en|transitive}} To [[travel]] by means of. {{defdate|from 19<sup>th</sup>c.}}
-##:{{ux|en|'''catch''' the bus}}
-##*'''1987''', {{w|A.J. Quinnell}}, ''[http://books.google.com/books?id=GJc1izYyDIkC In the Name of the Father]'', p.111:
-##*:After about a kilometer I '''caught''' a taxi to Santa Croce.
-##{{lb|en|transitive|rare}} To become [[pregnant]]. (Only in past tense or as participle.) {{defdate|from 19<sup>th</sup>c.}}
-##*'''2002''', Orpha Caton, ''[http://books.google.com/books?id=GmLXMp0c3NMC Shadow on the Creek]'', pp.102-103:
-##*:Had Nancy got '''caught''' with a child? If so she would destroy her parent's dreams for her.
-#{{lb|en|heading}} ''To seize hold of.''
-##{{lb|en|transitive|dated}} To [[grab]], [[seize]], take hold of. {{defdate|from 13<sup>th</sup>c.}}
-##:{{ux|en|I '''caught''' her by the arm and turned her to face me.}}
-##*{{RQ:Spenser Faerie Queene}}, III.2:
-##*:Her aged Nourse, whose name was Glaucè hight, / Feeling her leape out of her loathed nest, / Betwixt her feeble armes her quickly '''keight'''{{nb...}}.
-##{{lb|en|transitive}} To [[take]] or [[replenish]] something necessary, such as [[breath]] or [[sleep]]. {{defdate|from 14<sup>th</sup>c.}}
-##:{{ux|en|I have to stop for a moment and '''catch''' my breath.&emsp; {{nowrap|I '''caught''' some Z's on the train.}}}}
-##{{lb|en|transitive}} To [[grip]] or [[entangle]]. {{defdate|from 17<sup>th</sup>c.}}
-##:{{ux|en|My leg was '''caught''' in a tree-root.}}
-##{{lb|en|intransitive}} To be [[hold back|held back]] or [[impede]]d.
-##:{{ux|en|Be careful your dress doesn't '''catch''' on that knob.&emsp; {{nowrap|His voice '''caught''' when he came to his father's name.}}}}
-##*{{RQ:RJfrs AmtrPqr|II|071}}
-##*:Orion hit a rabbit once; but though sore wounded it got to the bury, and, struggling in, the arrow '''caught''' the side of the hole and was drawn out. Indeed, a nail filed sharp is not of much avail as an arrowhead; you must have it barbed, and that was a little beyond our skill.
-##{{lb|en|intransitive}} To [[engage]] with some mechanism; to [[stick]], to succeed in interacting with something or initiating some process. {{jump|engage|t}}
-##:{{ux|en|Push it in until it '''catches'''.&emsp; {{nowrap|The engine finally '''caught''' and roared to life.}}}}
-##{{lb|en|transitive}} To have something be [[hold back|held back]] or [[impede]]d.
-##:{{ux|en|I '''caught''' my heel on the threshold.}}
-##{{lb|en|intransitive}} To make a [[grasp]]ing or [[snatch]]ing motion (at). {{defdate|from 17<sup>th</sup>c.}}
-##:{{ux|en|He '''caught''' at the railing as he fell.}}
-##{{lb|en|transitive}} Of [[fire]], to [[spread]] or be [[convey]]ed to. {{defdate|from 18<sup>th</sup>c.}}
-##:{{ux|en|The fire spread slowly until it '''caught''' the eaves of the barn.}}
-##{{lb|en|transitive|rowing}} To [[grip]] (the water) with one's oars at the beginning of the stroke. {{defdate|from 19<sup>th</sup>c.}}
-##*'''1906''', Arthur W. Stevens, ''[http://books.google.com/books?id=M6ICAAAAYAAJ Practical Rowing with Scull and Sweep]'', p.63:
-##*:Stop gathering, in that gradual fashion, and '''catch''' the water sharply and decisively.
-##{{lb|en|intransitive|agriculture}} To [[germinate]] and set down [[root]]s. {{defdate|from 19<sup>th</sup>c.}}
-##:{{ux|en|The seeds '''caught''' and grew.}}
-##{{lb|en|transitive|surfing}} To contact a [[wave]] in such a way that one can ride it back to [[shore]].
-##*'''2001''', John Lull, ''[http://books.google.com/books?id=h5IVyQlKsL4C Sea Kayaking Safety & Rescue]'', p.203:
-##*:If you are surfing a wave through the rocks, make sure you have a clear route before '''catching''' the wave.
-##{{lb|en|transitive|computing}} To handle an [[exception]]. {{jump|handle error|t}} {{defdate|from 20<sup>th</sup>c.}}
-##:{{ux|en|When the program '''catches''' an exception, this is recorded in the log file.}}
-#{{lb|en|heading}} ''To intercept.''
-##{{lb|en|transitive}} To [[seize]] or intercept a object moving through the air (or, sometimes, some other medium). {{jump|seize in motion|s|t}} {{defdate|from 16<sup>th</sup>c.}}
-##:{{ux|en|I will throw you the ball, and you '''catch''' it.&emsp; {{nowrap|Watch me '''catch''' this raisin in my mouth.}}}}
-##{{lb|en|transitive|now|_|rare}} To [[seize]] (an [[opportunity]]) when it occurs. {{jump|seize opportunity|t}} {{defdate|from 16<sup>th</sup>c.}}
-##*'''1811''', {{w|Jane Austen}}, ''{{w|Sense and Sensibility}}'', [[wikisource:Sense_and_Sensibility/Chapter_18|Chapter 18]]:
-##*:she internally resolved henceforward to '''catch''' every opportunity of eyeing the hair and of satisfying herself,{{nb...}}.
-##{{lb|en|transitive|cricket}} To end a player's [[innings]] by catching a hit ball before the first bounce. {{defdate|from 18<sup>th</sup>c.}}
-##:{{ux|en|Townsend hit 29 before he was '''caught''' by Wilson.}}
-##{{lb|en|transitive|intransitive|baseball}} To play (a specific period of time) as the [[catcher]]. {{defdate|from 19<sup>th</sup>c.}}
-##:{{ux|en|He '''caught''' the last three innings.}}
-#{{lb|en|heading}} ''To receive (by being in the way).''
-##{{lb|en|transitive}} To be the victim of (something unpleasant, painful etc.). {{defdate|from 13<sup>th</sup>c.}}
-##:{{ux|en|You're going to '''catch''' a beating if they find out.}}
-##{{lb|en|transitive}} To be touched or affected by (something) through exposure. {{defdate|from 13<sup>th</sup>c.}}
-##:{{ux|en|The sunlight '''caught''' the leaves and the trees turned to gold.&emsp; {{nowrap|Her hair was '''caught''' by the light breeze.}}}}
-##{{lb|en|transitive}} To be [[infect]]ed by (an illness). {{defdate|from 16<sup>th</sup>c.}}
-##:{{ux|en|Everyone seems to be '''catching''' the flu this week.}}
-##{{lb|en|intransitive}} To spread by [[infection]] or similar means.
-##*{{w|Joseph Addison}} (1672–1719)
-##*:Does the sedition '''catch''' from man to man?
-##*{{w|Mary Martha Sherwood}} (1775–1851)
-##*:He accosted Mrs. Browne very civilly, told her his wife was very ill, and said he was sadly troubled to get a white woman to nurse her: "For," said he, "Mrs. Simpson has set it abroad that her fever is '''catching'''."
-##{{lb|en|transitive|intransitive}} To [[receive]] or be affected by (wind, water, fire etc.). {{defdate|from 18<sup>th</sup>c.}}
-##:{{ux|en|The bucket '''catches''' water from the downspout.&emsp; {{nowrap|The trees '''caught''' quickly in the dry wind.}}}}
-##*'''2003''', Jerry Dennis, ''[http://books.google.com/books?id=3P8lsPL0FQQC The Living Great Lakes]'', p.63:
-##*:the sails '''caught''' and filled, and the boat jumped to life beneath us.
-##{{lb|en|transitive}} To [[acquire]], as though by infection; to take on through sympathy or infection. {{defdate|from 16<sup>th</sup>c.}}
-##:{{ux|en|She finally '''caught''' the mood of the occasion.}}
-##{{lb|en|transitive}} To be [[hit]] by something. {{jump|be hit|s}}
-##:{{ux|en|He '''caught''' a bullet in the back of the head last year.}}
-##{{lb|en|intransitive}} To [[serve]] well or poorly for catching, especially for catching fish.
-##*{{quote-book|year=1877|title=[http://books.google.com/books?id=tXUSAAAAYAAJ Annual Report of the Ohio State Board of Agriculture]|page=135
+## {{lb|en|transitive}} To [[overtake]] or [[catch up]] to; to be in time for. {{defdate|from 17<sup>th</sup>c.}}
+##: {{ux|en|If you leave now you might '''catch''' him.&emsp; {{nowrap|I would love to have dinner but I have to '''catch''' a plane.}}}}
+## {{lb|en|transitive}} To [[discover]] unexpectedly; to [[surprise]] (someone doing something). {{defdate|from 17<sup>th</sup>c.}}
+##: {{ux|en|He was '''caught''' on video robbing the bank.&emsp; {{nowrap|He was '''caught''' in the act of stealing a biscuit.}}}}
+## {{lb|en|transitive}} To [[travel]] by means of. {{defdate|from 19<sup>th</sup>c.}}
+##: {{ux|en|'''catch''' the bus}}
+##* '''1987''', {{w|A.J. Quinnell}}, ''[http://books.google.com/books?id=GJc1izYyDIkC In the Name of the Father]'', p.111:
+##*: After about a kilometer I '''caught''' a taxi to Santa Croce.
+## {{lb|en|transitive|rare}} To become [[pregnant]]. (Only in past tense or as participle.) {{defdate|from 19<sup>th</sup>c.}}
+##* '''2002''', Orpha Caton, ''[http://books.google.com/books?id=GmLXMp0c3NMC Shadow on the Creek]'', pp.102-103:
+##*: Had Nancy got '''caught''' with a child? If so she would destroy her parent's dreams for her.
+# {{lb|en|heading}} ''To seize hold of.''
+## {{lb|en|transitive|dated}} To [[grab]], [[seize]], take hold of. {{defdate|from 13<sup>th</sup>c.}}
+##: {{ux|en|I '''caught''' her by the arm and turned her to face me.}}
+##* {{RQ:Spenser Faerie Queene}}, III.2:
+##*: Her aged Nourse, whose name was Glaucè hight, / Feeling her leape out of her loathed nest, / Betwixt her feeble armes her quickly '''keight'''{{nb...}}.
+## {{lb|en|transitive}} To [[take]] or [[replenish]] something necessary, such as [[breath]] or [[sleep]]. {{defdate|from 14<sup>th</sup>c.}}
+##: {{ux|en|I have to stop for a moment and '''catch''' my breath.&emsp; {{nowrap|I '''caught''' some Z's on the train.}}}}
+## {{lb|en|transitive}} To [[grip]] or [[entangle]]. {{defdate|from 17<sup>th</sup>c.}}
+##: {{ux|en|My leg was '''caught''' in a tree-root.}}
+## {{lb|en|intransitive}} To be [[hold back|held back]] or [[impede]]d.
+##: {{ux|en|Be careful your dress doesn't '''catch''' on that knob.&emsp; {{nowrap|His voice '''caught''' when he came to his father's name.}}}}
+##* {{RQ:RJfrs AmtrPqr|II|071}}
+##*: Orion hit a rabbit once; but though sore wounded it got to the bury, and, struggling in, the arrow '''caught''' the side of the hole and was drawn out. Indeed, a nail filed sharp is not of much avail as an arrowhead; you must have it barbed, and that was a little beyond our skill.
+## {{lb|en|intransitive}} To [[engage]] with some mechanism; to [[stick]], to succeed in interacting with something or initiating some process. {{jump|engage|t}}
+##: {{ux|en|Push it in until it '''catches'''.&emsp; {{nowrap|The engine finally '''caught''' and roared to life.}}}}
+## {{lb|en|transitive}} To have something be [[hold back|held back]] or [[impede]]d.
+##: {{ux|en|I '''caught''' my heel on the threshold.}}
+## {{lb|en|intransitive}} To make a [[grasp]]ing or [[snatch]]ing motion (at). {{defdate|from 17<sup>th</sup>c.}}
+##: {{ux|en|He '''caught''' at the railing as he fell.}}
+## {{lb|en|transitive}} Of [[fire]], to [[spread]] or be [[convey]]ed to. {{defdate|from 18<sup>th</sup>c.}}
+##: {{ux|en|The fire spread slowly until it '''caught''' the eaves of the barn.}}
+## {{lb|en|transitive|rowing}} To [[grip]] (the water) with one's oars at the beginning of the stroke. {{defdate|from 19<sup>th</sup>c.}}
+##* '''1906''', Arthur W. Stevens, ''[http://books.google.com/books?id=M6ICAAAAYAAJ Practical Rowing with Scull and Sweep]'', p.63:
+##*: Stop gathering, in that gradual fashion, and '''catch''' the water sharply and decisively.
+## {{lb|en|intransitive|agriculture}} To [[germinate]] and set down [[root]]s. {{defdate|from 19<sup>th</sup>c.}}
+##: {{ux|en|The seeds '''caught''' and grew.}}
+## {{lb|en|transitive|surfing}} To contact a [[wave]] in such a way that one can ride it back to [[shore]].
+##* '''2001''', John Lull, ''[http://books.google.com/books?id=h5IVyQlKsL4C Sea Kayaking Safety & Rescue]'', p.203:
+##*: If you are surfing a wave through the rocks, make sure you have a clear route before '''catching''' the wave.
+## {{lb|en|transitive|computing}} To handle an [[exception]]. {{jump|handle error|t}} {{defdate|from 20<sup>th</sup>c.}}
+##: {{ux|en|When the program '''catches''' an exception, this is recorded in the log file.}}
+# {{lb|en|heading}} ''To intercept.''
+## {{lb|en|transitive}} To [[seize]] or intercept a object moving through the air (or, sometimes, some other medium). {{jump|seize in motion|s|t}} {{defdate|from 16<sup>th</sup>c.}}
+##: {{ux|en|I will throw you the ball, and you '''catch''' it.&emsp; {{nowrap|Watch me '''catch''' this raisin in my mouth.}}}}
+## {{lb|en|transitive|now|_|rare}} To [[seize]] (an [[opportunity]]) when it occurs. {{jump|seize opportunity|t}} {{defdate|from 16<sup>th</sup>c.}}
+##* '''1811''', {{w|Jane Austen}}, ''{{w|Sense and Sensibility}}'', [[wikisource:Sense_and_Sensibility/Chapter_18|Chapter 18]]:
+##*: she internally resolved henceforward to '''catch''' every opportunity of eyeing the hair and of satisfying herself,{{nb...}}.
+## {{lb|en|transitive|cricket}} To end a player's [[innings]] by catching a hit ball before the first bounce. {{defdate|from 18<sup>th</sup>c.}}
+##: {{ux|en|Townsend hit 29 before he was '''caught''' by Wilson.}}
+## {{lb|en|transitive|intransitive|baseball}} To play (a specific period of time) as the [[catcher]]. {{defdate|from 19<sup>th</sup>c.}}
+##: {{ux|en|He '''caught''' the last three innings.}}
+# {{lb|en|heading}} ''To receive (by being in the way).''
+## {{lb|en|transitive}} To be the victim of (something unpleasant, painful etc.). {{defdate|from 13<sup>th</sup>c.}}
+##: {{ux|en|You're going to '''catch''' a beating if they find out.}}
+## {{lb|en|transitive}} To be touched or affected by (something) through exposure. {{defdate|from 13<sup>th</sup>c.}}
+##: {{ux|en|The sunlight '''caught''' the leaves and the trees turned to gold.&emsp; {{nowrap|Her hair was '''caught''' by the light breeze.}}}}
+## {{lb|en|transitive}} To be [[infect]]ed by (an illness). {{defdate|from 16<sup>th</sup>c.}}
+##: {{ux|en|Everyone seems to be '''catching''' the flu this week.}}
+## {{lb|en|intransitive}} To spread by [[infection]] or similar means.
+##* {{w|Joseph Addison}} (1672–1719)
+##*: Does the sedition '''catch''' from man to man?
+##* {{w|Mary Martha Sherwood}} (1775–1851)
+##*: He accosted Mrs. Browne very civilly, told her his wife was very ill, and said he was sadly troubled to get a white woman to nurse her: "For," said he, "Mrs. Simpson has set it abroad that her fever is '''catching'''."
+## {{lb|en|transitive|intransitive}} To [[receive]] or be affected by (wind, water, fire etc.). {{defdate|from 18<sup>th</sup>c.}}
+##: {{ux|en|The bucket '''catches''' water from the downspout.&emsp; {{nowrap|The trees '''caught''' quickly in the dry wind.}}}}
+##* '''2003''', Jerry Dennis, ''[http://books.google.com/books?id=3P8lsPL0FQQC The Living Great Lakes]'', p.63:
+##*: the sails '''caught''' and filled, and the boat jumped to life beneath us.
+## {{lb|en|transitive}} To [[acquire]], as though by infection; to take on through sympathy or infection. {{defdate|from 16<sup>th</sup>c.}}
+##: {{ux|en|She finally '''caught''' the mood of the occasion.}}
+## {{lb|en|transitive}} To be [[hit]] by something. {{jump|be hit|s}}
+##: {{ux|en|He '''caught''' a bullet in the back of the head last year.}}
+## {{lb|en|intransitive}} To [[serve]] well or poorly for catching, especially for catching fish.
+##* {{quote-book|year=1877|title=[http://books.google.com/books?id=tXUSAAAAYAAJ Annual Report of the Ohio State Board of Agriculture]|page=135
 |passage=The nets '''caught''' well, and Mr. Deeley reported it the best fishing ground he ever tried.}}
-##{{lb|en|intransitive|}} To get pregnant.
-##:{{ux|en|Well, if you didn't '''catch''' this time, we'll have more fun trying again until you do.}}
-#{{lb|en|heading}} ''To take in with one's senses or intellect.''
-##{{lb|en|transitive}} To grasp mentally: [[perceive]] and [[understand]]. {{jump|perceive and understand|t}} {{defdate|from 16<sup>th</sup>c.}}
-##:{{ux|en|Did you '''catch''' his name?&emsp; {{nowrap|Did you '''catch''' the way she looked at him?}}}}
-##*{{RQ:Chmbrs YngrSt|IX}}
+## {{lb|en|intransitive|}} To get pregnant.
+##: {{ux|en|Well, if you didn't '''catch''' this time, we'll have more fun trying again until you do.}}
+# {{lb|en|heading}} ''To take in with one's senses or intellect.''
+## {{lb|en|transitive}} To grasp mentally: [[perceive]] and [[understand]]. {{jump|perceive and understand|t}} {{defdate|from 16<sup>th</sup>c.}}
+##: {{ux|en|Did you '''catch''' his name?&emsp; {{nowrap|Did you '''catch''' the way she looked at him?}}}}
+##* {{RQ:Chmbrs YngrSt|IX}}
 ##*:“A tight little craft,” was Austin’s invariable comment on the matron;{{nb...}}. &para; Near her wandered her husband, orientally bland, invariably affable, and from time to time squinting sideways, as usual, in the ever-renewed expectation that he might '''catch''' a glimpse of his stiff, retroussé moustache.
-##{{lb|en|transitive}} To [[take in]]; to [[watch]] or [[listen to]] (an entertainment). {{defdate|from 20<sup>th</sup>c.}}
-##:{{ux|en|I have some free time tonight so I think I'll '''catch''' a movie.}}
-##{{lb|en|transitive}} To [[reproduce]] or [[echo]] a spirit or idea faithfully. {{defdate|from 17<sup>th</sup>c.}}
-##:{{ux|en|You've really '''caught''' his determination in this sketch.}}
-#{{lb|en|heading}} ''To seize attention, interest.''
-##{{lb|en|transitive}} To [[charm]] or [[entrance]]. {{defdate|from 14<sup>th</sup>c.}}
-##*'''2004''', Catherine Asaro, ''[http://books.google.com/books?id=O2Rj1kYTF1kC The Moon's Shadow]'', p.40:
-##*:No, a far more natural beauty '''caught''' him.
-##{{lb|en|transitive}} To [[attract]] and [[hold]] (a faculty or organ of sense). {{defdate|from 17<sup>th</sup>c.}}
-##:{{ux|en|He managed to '''catch''' her attention.&emsp; {{nowrap|The enormous scarf did '''catch''' my eye.}}}}
-#{{lb|en|heading}} ''To obtain or experience''
+## {{lb|en|transitive}} To [[take in]]; to [[watch]] or [[listen to]] (an entertainment). {{defdate|from 20<sup>th</sup>c.}}
+##: {{ux|en|I have some free time tonight so I think I'll '''catch''' a movie.}}
+## {{lb|en|transitive}} To [[reproduce]] or [[echo]] a spirit or idea faithfully. {{defdate|from 17<sup>th</sup>c.}}
+##: {{ux|en|You've really '''caught''' his determination in this sketch.}}
+# {{lb|en|heading}} ''To seize attention, interest.''
+## {{lb|en|transitive}} To [[charm]] or [[entrance]]. {{defdate|from 14<sup>th</sup>c.}}
+##* '''2004''', Catherine Asaro, ''[http://books.google.com/books?id=O2Rj1kYTF1kC The Moon's Shadow]'', p.40:
+##*: No, a far more natural beauty '''caught''' him.
+## {{lb|en|transitive}} To [[attract]] and [[hold]] (a faculty or organ of sense). {{defdate|from 17<sup>th</sup>c.}}
+##: {{ux|en|He managed to '''catch''' her attention.&emsp; {{nowrap|The enormous scarf did '''catch''' my eye.}}}}
+# {{lb|en|heading}} ''To obtain or experience''
 
 ====Synonyms====
 * {{jump|s|seize in motion}} [[fang]], [[snatch]], [[grab]]
@@ -364,7 +364,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Venetian: {{t|vec|ciapar}}
 {{trans-bottom}}
 
-{{trans-top|to intercept an object in the air etc. {{jump|t|seize object}} }}
+{{trans-top|to intercept an object in the air etc. {{jump|t|seize object}}}}
 * Arabic: {{t|ar|أَمْسَكَ|tr=amsaka}}, {{t|ar|مَسَكَ|tr=masaka}}
 * Armenian: {{t|hy|բռնել}}
 * Belarusian: {{t|be|лаві́ць|impf}}, {{t|be|злаві́ць|pf}}, {{t|be|залаві́ць|pf}}
@@ -400,7 +400,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Ukrainian: {{t+|uk|лови́ти|impf}}, {{t+|uk|пійма́ти|pf}}
 {{trans-bottom}}
 
-{{trans-top|to perceive and understand {{jump|t|perceive and understand}} }}
+{{trans-top|to perceive and understand {{jump|t|perceive and understand}}}}
 * Basque: {{t|eu|harrapatu}}
 * Bulgarian: {{t+|bg|схващам}}
 * Chinese:
@@ -421,14 +421,14 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Swedish: {{t+|sv|fatta}} {{qualifier|colloquial}}, {{t+|sv|uppfatta}}
 {{trans-bottom}}
 
-{{trans-top|to seize an opportunity {{jump|t|seize opportunity}} }}
+{{trans-top|to seize an opportunity {{jump|t|seize opportunity}}}}
 * Czech: {{t+|cs|chytit}}, {{t|cs|chytnout}}
 * Dutch: {{t+|nl|grijpen}}
 {{trans-mid}}
 * Swedish: {{t+|sv|gripa}}
 {{trans-bottom}}
 
-{{trans-top|to reach in time to leave {{jump|t|reach in time}} }}
+{{trans-top|to reach in time to leave {{jump|t|reach in time}}}}
 * Bulgarian: {{t+|bg|хващам}}
 * Czech: {{t+|cs|chytit}}, {{t|cs|chytnout}}
 * Dutch: {{t+|nl|halen}}
@@ -438,14 +438,14 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Slovene: {{t|sl|ujeti}}
 {{trans-bottom}}
 
-{{trans-top|to engage, stick, or grasp {{jump|t|engage}} }}
+{{trans-top|to engage, stick, or grasp {{jump|t|engage}}}}
 * Bulgarian: {{t|bg|закачам се}}
 * Czech: {{t+|cs|chytit}} se, {{t|cs|chytnout}} se
 {{trans-mid}}
 * Finnish: {{t+|fi|tarttua}}
 {{trans-bottom}}
 
-{{trans-top|to handle a computer error, especially an exception {{jump|t|handle error}} }}
+{{trans-top|to handle a computer error, especially an exception {{jump|t|handle error}}}}
 * Finnish: {{t+|fi|siepata}}
 * Polish: {{t|pl|przechwycać|impf}}, {{t|pl|przechwycić|pf}}
 {{trans-mid}}
