--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -28,6 +28,8 @@
 {{trans-top|colour}}
 * Bulgarian: {{t+|bg|светложълт|sc=Cyrl}}
 * French: {{t|fr|de lin}}
+* Chinese:
+*: Mandarin: {{t|cmn|亚麻色|sc=Hani}}
 * Finnish: {{t|fi|pellavan värinen}}
 {{trans-mid}}
 * Japanese: [[亜麻]][[色]]の (あまいろの, amairo no)
