--- a/en/昳/昳.16988.wikitext
+++ b/en/昳/昳.16988.wikitext
@@ -38,6 +38,18 @@
 
 # {{defn|lang=cmn|sort=日05}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=日05| hanviet = điệt}}
+
+# {{defn|lang=vi|sort=日05}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=6633 Nom Foundation]
+
 [[fr:昳]]
 [[hu:昳]]
 [[pl:昳]]
