--- a/en/昶/昶.16991.wikitext
+++ b/en/昶/昶.16991.wikitext
@@ -2,9 +2,12 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=3623<sub>0</sub>|canj=戈水日 (IEA)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=3623<sub>0</sub>|canj=戈水日 (IEA)|ids=⿺[[永]][[日]]}}
 
-# a long day. bright. extended. clear
+# a [[long]] [[day]]
+# [[bright]]
+# [[extended]]
+# [[clear]]
 
 ====References====
 * {{Han ref|kx=0494.080|dkj=13867|dj=0858.140|hdz=21503.130|uh=6636|ud=26166|bh=CEEB|bd=52971}}
