--- a/en/昶/昶.16991.wikitext
+++ b/en/昶/昶.16991.wikitext
@@ -47,7 +47,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[chǎng]] ([[chang3]]), [[chàng]] ([[chang4]])|wg=ch'ang<sup>3</sup>, ch'ang<sup>4</sup>}}
+{{cmn-hanzi|pin=[[chǎng]] ([[chang3]])|wg=ch'ang<sup>3</sup>}}
 
 # {{defn|lang=cmn|sort=日05}}
 
